Layout adjustments to fix layout issues

--- a/src/vs/workbench/browser/parts/positronTopActionBar/customFolderModalPopup/customFolderMenuItems.css
+++ b/src/vs/workbench/browser/parts/positronTopActionBar/customFolderModalPopup/customFolderMenuItems.css
@@ -3,8 +3,9 @@
  *--------------------------------------------------------------------------------------------*/
 
 .custom-folder-menu-items {
-	width: 100%;
 	margin: 4px;
+	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	background-color: var(--vscode-positronContextMenu-background);
